--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
+body {
+  font-family: "Lato", sans-serif;
+  background-color: #fafcff;
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input:focus {
+  box-shadow: none !important;
+  border-bottom: 1px solid #ced4da !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+select:focus {
+  box-shadow: none !important;
+  border: 1px solid #ced4da !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input:focus {
+  box-shadow: none !important;
+  border: 1px solid #ced4da !important;
 }
 
-.App-link {
-  color: #61dafb;
+.text-sidebar {
+  font-size: 14px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.border-radius-0 {
+  border-radius: 0 !important;
+}
+
+.sidebar-menu {
+  padding: 13px;
+}
+
+.sidebar-menu:hover {
+  background-color: #4f709c;
+  border-radius: 10px;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.default-cursor {
+  cursor: default;
+}
+
+.dropdown-toggle::after {
+  border: none !important;
+}
+
+.btn-check:checked + .btn,
+.btn.active,
+.btn.show,
+.btn:first-child:active,
+:not(.btn-check) + .btn:active {
+  border-color: white !important;
+}
+
+.bg-blue {
+  background-color: #749BC2!important;
+}
+
+.w-70{
+  width: 70%!important;
+}
+
+.text-xs {
+  font-size: 0.7rem;
 }
